3.4.1: ignoring empty sentences