@@ -129,9 +129,9 @@ public class SyntaxParser implements ISyntaxParser {
 	private Word searchMainForm(List<Word> words) {
 		List<Word> lonely = words.stream()
 			.filter(word -> !word.haveMain() && word.haveContainsBearingForm())
-			.collect(Collectors.toList());
-		if (lonely.size() == 0) {
-			log.info("Не удалось найти подходящие слово в роли главного опорного слова");
+			.toList();
+		if (lonely.isEmpty()) {
+			log.trace("Не удалось найти подходящие слово в роли главного опорного слова");
 			return words.stream()
 				.filter(Word::haveContainsBearingForm)
 				.findFirst().orElse(words.get(words.size() - 1));
